Add Redshift as a third federated source (manual deployment)
Extends athena-manual-connector-deployment.md with a Redshift connector
POC, deployed the same way as DynamoDB and MySQL: pre-built jar uploaded
directly to Lambda, no SAR.

Verified against source (athena-redshift.yaml, RedshiftConstants.java at
v2026.24.1) that Redshift's connector is the same athena-jdbc family as
MySQL's: RedshiftMuxCompositeHandler, same env var shape, same Secrets
Manager credential mechanism. Reuses the VPC, subnets, and both VPC
endpoints already created for MySQL rather than duplicating them.

Uses a single-node dc2.large provisioned cluster ($0.25/hr, storage
included) rather than Redshift Serverless (8 RPU minimum in us-east-1,
~$3/hr active) - the right call for a short-lived POC, and possibly free
under AWS's 2-month Redshift trial.

Adds a payments table seeded against the existing MySQL orders, and a
three-way federated join (DynamoDB customers -> MySQL orders -> Redshift
payments) as the capstone query, using LEFT JOIN to show unpaid orders
rather than dropping them.

Renumbers Phase 5 onward to make room; all internal phase cross-references
updated to match.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>